# avim

./: .gitignore  .gitmodules  .travis.yml  404.html  500.html  CMakeLists.txt  README.md  account.html  avim.pro  ci_trigger  download.html  form_validation.html  gen_sln.bat  index - 副本.html  index.html  tutorials.html  tweakvcflasgs.cmake
android-build/include/: address.pb.h  ca.pb.h  group.pb.h  im.pb.h  openssl  packet.pb.h  user.pb.h
android-build/include/openssl/: opensslconf.h
android-build/libs/: libcrypto.so.1.0.0  libprotobuf.so.9.0.1  libprotoc.so.9.0.1  libssl.so.1.0.0  protoc
android-build/protobuf3/v3.0.0-alpha-1/: readme.md
android-build/protobuf3/v3.0.0-alpha-1/jni/: Application.mk
css/: style.css
demo/: new_im.cpp
gui/: CMakeLists.txt  app.cpp  app.hpp  avconnection.cpp  avconnection.hpp  avim.cpp  avim.h  avim.qrc  avim.ui  chat.cpp  chat.h  chat.hpp  chat_widget.cpp  chat_widget.hpp  chat_widget.ui  gavim.cpp  gavim.h  gavim.pro  gavim.ui  ini.cpp  ini.h  login_dialog.cpp  login_dialog.h  login_dialog.ui  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  mainwindow.cpp  mainwindow.hpp  syncobj.cpp  syncobj.hpp  system_tray.cpp  system_tray.hpp
gui/librichtext/: CMakeLists.txt  chat_segment_widget.ui  giftextobject.hpp  qrichedit.cpp  qrichedit.hpp  qrichtext.cpp  qrichtext.hpp  qrichtextlayout.cpp  qrichtextlayout.hpp
src/: CMakeLists.txt  app.cpp  app.hpp  avbuddy.cpp  avbuddy.hpp  avconnection.cpp  avconnection.hpp  avim.icns  avim.pro  avim.qrc  avim.rc  buddymodel.cpp  buddymodel.hpp  chat_widget.cpp  chat_widget.hpp  chat_widget.ui  ini.cpp  ini.h  login_dialog.cpp  login_dialog.h  login_dialog.hpp  login_dialog.ui  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  register_dialog.cpp  register_dialog.hpp  register_dialog.ui
src/librichtext/: CMakeLists.txt  chat_segment_widget.ui  qbubbleframe.cpp  qrichtext.cpp  qrichtextlayout.cpp  qrichtextlayout.hpp
src/widgets/: CMakeLists.txt
src/widgets/chatwidget/: CMakeLists.txt  chatwidget.cpp  chatwidget.hpp  chatwidget.ui
src/widgets/login/: CMakeLists.txt  login_dialog.cpp  login_dialog.hpp  login_dialog.ui  register_dialog.ui
src/widgets/mainwindow/: CMakeLists.txt  main_window.cpp  main_window.hpp  main_window.ui
src/widgets/qrichtext/: CMakeLists.txt  chat_segment_widget.ui  qbubbleframe.cpp  qbubbleframe.hpp  qrichedit.cpp  qrichedit.hpp  qrichtext.cpp  qrichtextlayout.cpp
src/widgets/register/: CMakeLists.txt  register_dialog.cpp  register_dialog.hpp
src/widgets/systray/: CMakeLists.txt  system_tray.cpp  system_tray.hpp
wrapper/: CMakeLists.txt  cstub.cpp
